Make an installabe version now, before PR approve

--- a/env.yaml
+++ b/env.yaml
@@ -5,4 +5,4 @@ dependencies:
   - mkl-include
   - pip
   - pip:
-    - git+https://github.com/capoe/nphil.git#egg=nphil 
+    - git+https://github.com/inuritdino/nphil.git@mkl#egg=nphil
